WIP for invitation flow